--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,15 @@ body {
 html {
   font-size: 62.5%;
 }
-
+::-webkit-scrollbar {
+  width: 1.5rem;
+}
+::-webkit-scrollbar-track {
+  background: gray;
+}
+::-webkit-scrollbar-thumb {
+  background: red;
+}
 @media only screen and (max-width: 576px) {
   html {
     font-size: 50%;
